support multiple degs
